tests added for userservice class, h2 inmemory database configured

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,58 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Please Log In</title>
+    <title>Log In</title>
+    <link th:href="@{/css/login.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Please Log In</h1>
 <h2 th:text = ${stateMessage}>Invalid username and password.</h2>
 
-<form th:action="@{/public/login}" method="post" th:object="${user}">
-    <div>
-        <input type="text" name="username" placeholder="Username" />
+<div class="container" id="container">
+    <div class="form-container sign-up-container">
+        <form action="#">
+            <h1>Create Account</h1>
+            <div class="social-container">
+                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <span>or use your email for registration</span>
+            <input type="text" placeholder="Name" />
+            <input type="email" placeholder="Email" />
+            <input type="password" placeholder="Password" />
+            <button>Sign Up</button>
+        </form>
     </div>
-    <div>
-        <input type="password" name="password" placeholder="Password" />
+    <div class="form-container sign-in-container">
+        <form action="#"  th:action="@{/public/login}" method="post" th:object="${user}">
+            <h1>Sign in</h1>
+            <div class="social-container">
+                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <span>or use your account</span>
+            <input type="text" placeholder="Username" th:field="*{username}"/>
+            <input type="password" placeholder="Password" th:field="*{password}"/>
+            <a href="/public/login">Forgot your password?</a>
+            <button>Sign In</button>
+        </form>
     </div>
-    <input type="submit" value="Log in" />
-</form>
-
-<div>
-    <span th:text="${sessionId}">sessionId</span>
+    <div class="overlay-container">
+        <div class="overlay">
+            <div class="overlay-panel overlay-left">
+                <h1>Welcome Back!</h1>
+                <p>To keep connected with us please login with your personal info</p>
+                <button class="ghost" id="signIn">Sign In</button>
+            </div>
+            <div class="overlay-panel overlay-right">
+                <h1>Hello, Friend!</h1>
+                <p>Enter your personal details and start journey with us</p>
+                <button class="ghost" id="signUp">Sign Up</button>
+            </div>
+        </div>
+    </div>
 </div>
+<script type="text/javascript" th:src="@{/js/login.js}"></script>
 </body>
 </html>
